Profile image upload in SettingsActivity to Firebase Storage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:theme="@style/Base.Theme.AppCompat"/>
         <activity
             android:name=".SettingsActivity"
-            android:exported="true"
+            android:label="@string/title_settings"
             android:parentActivityName=".HomePageActivity"
             android:theme="@style/Theme.giveall.NoActionBar">
         <meta-data
